Add Exercise 2 in a new folder and link it to the main page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My test page</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Web as Medium</h1>
+    <h2><a href="exercise2/index.html">Exercise 2: Handmade Web</a></h2>
   </body>
 </html>
