exercise 3 added: new project folder created with css styling added to 'A Handmade Web' navigation

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>My test page</title>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <h1>Web as Medium</h1>
-    <h2><a href="exercise2/index.html">Exercise 2: Handmade Web</a></h2>
+    <h2>Alex Hogue</h2>
+    <h3><a href="exercise2/index.html">Exercise 2: HTML</a></h3>
+    <h3><a href="exercise3/index.html">Exercise 3: CSS</a></h3>
   </body>
 </html>
