--- a/index.html
+++ b/index.html
@@ -7,9 +7,28 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <h1>Web as Medium</h1>
-    <h2>Alex Hogue</h2>
-    <h3><a href="exercise2/index.html">Exercise 2: HTML</a></h3>
-    <h3><a href="exercise3/index.html">Exercise 3: CSS</a></h3>
+    <div>
+      <h1>Web as Medium</h1>
+      <h2>Alex Hogue</h2>
+    </div>
+    <div class="exercises">
+      <hr>
+      <div class="exercise-section">
+        <h3>Exercise 1: Hello world :)</h3>
+      </div>
+      <hr>
+      <div class="exercise-section">
+        <a href="exercise2/index.html">
+          <h3>Exercise 2: Basic HTML</h3>
+        </a>
+      </div>
+      <hr>
+      <div class="exercise-section">
+        <a href="exercise3/index.html">
+          <h3>Exercise 3: Adding CSS</h3>
+        </a>
+      </div>
+      <hr>
+    </div>
   </body>
 </html>
