small styling changes: added new svg icons

--- a/exercise3/03-section.html
+++ b/exercise3/03-section.html
@@ -20,7 +20,7 @@
         <div class="nav-section">
             <div>
                 <a class="nav-button" href="./02-section.html">
-                    <img src="./assets/left-arrow.png"/>
+                    <img src="./assets/left-arrow.svg"/>
                     <h3>2</h3>
                 </a>
             </div>
@@ -70,7 +70,7 @@
             <div>
                 <a class="nav-button" href="./04-section.html">
                     <h3>4</h3>
-                    <img src="./assets/right-arrow.png"/>
+                    <img src="./assets/right-arrow.svg"/>
                 </a>
             </div>
         </div>
