--- a/exercise3/06-section.html
+++ b/exercise3/06-section.html
@@ -20,7 +20,7 @@
         <div class="nav-section">
             <div>
                 <a class="nav-button" href="./05-section.html">
-                    <img src="./assets/left-arrow.png"/>
+                    <img src="./assets/left-arrow.svg"/>
                     <h3>5</h3>
                 </a>
             </div>
@@ -41,8 +41,8 @@
             </div>
             <div>
                 <a class="nav-button" href="./index.html">
-                    <h3>Home</h3>
-                    <img src="./assets/right-arrow.png"/>
+                    <img src="./assets/home.svg"/>
+                    <img src="./assets/right-arrow.svg"/>
                 </a>
             </div>
         </div>
