--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <div class="exercises">
       <hr>
       <div class="exercise-section">
-        <h3>Exercise 1: Hello world :)</h3>
+        <h3>✴︎ Exercise 1: Hello world :)</h3>
       </div>
       <hr>
       <div class="exercise-section">
         <a href="exercise2/index.html">
-          <h3>Exercise 2: Basic HTML</h3>
+          <h3>✴︎ Exercise 2: Basic HTML</h3>
         </a>
       </div>
       <hr>
       <div class="exercise-section">
         <a href="exercise3/index.html">
-          <h3>Exercise 3: Adding CSS</h3>
+          <h3>✴︎ Exercise 3: Adding CSS</h3>
         </a>
       </div>
       <hr>
