--- a/exercise3/01-section.html
+++ b/exercise3/01-section.html
@@ -20,8 +20,8 @@
         <div class="nav-section">
             <div>
                 <a class="nav-button" href="./index.html">
-                    <img src="./assets/left-arrow.png"/>
-                    <h3>Home</h3>
+                    <img src="./assets/left-arrow.svg"/>
+                    <img src="./assets/home.svg"/>
                 </a>
             </div>
             <div class="text-section">
@@ -51,7 +51,7 @@
             <div>
                 <a class="nav-button" href="./02-section.html">
                     <h3>2</h3>
-                    <img src="./assets/right-arrow.png"/>
+                    <img src="./assets/right-arrow.svg"/>
                 </a>
             </div>
         </div>
