--- a/exercise3/02-section.html
+++ b/exercise3/02-section.html
@@ -20,7 +20,7 @@
         <div class="nav-section">
             <div>
                 <a class="nav-button" href="./01-section.html">
-                    <img src="./assets/left-arrow.png"/>
+                    <img src="./assets/left-arrow.svg"/>
                     <h3>1</h3>
                 </a>
             </div>
@@ -86,7 +86,7 @@
             <div>
                 <a class="nav-button" href="./03-section.html">
                     <h3>3</h3>
-                    <img src="./assets/right-arrow.png"/>
+                    <img src="./assets/right-arrow.svg"/>
                 </a>
             </div>
         </div>
