reorganize definition layout on pages

--- a/exercise3/02-section.html
+++ b/exercise3/02-section.html
@@ -9,14 +9,21 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body><!--all the contents of an HTML document goes here-->
-        <nav>
-            <div id="breadcrumbs">
-                <a href="../index.html"><p>Home</p></a>
-                <p>></p>
-                <a href="./index.html"><p>A Handmade Web</p></a>
-            </div>
-            <!-- <hr> -->
-        </nav>
+        <div class="fixed-cont">
+            <nav>
+                <div id="breadcrumbs">
+                    <a href="../index.html"><p>Home</p></a>
+                    <p>></p>
+                    <a href="./index.html"><p>A Handmade Web</p></a>
+                </div>
+                <!-- <hr> -->
+            </nav>
+            <div class="definition">
+                <h2>Definition 2</h2>
+                <p><strong>I evoke the term 'handmade web' in order to make a correlation between handmade web
+                    pages and handmade print materials, such as zines, pamphlets, and artists books.</strong></p>
+            </div> 
+        </div>
         <div class="nav-section">
             <div>
                 <a class="nav-button" href="./01-section.html">
@@ -25,11 +32,6 @@
                 </a>
             </div>
             <div class="text-section">
-                <div class="definition">
-                    <h2>Definition 2</h2>
-                    <p><strong>I evoke the term 'handmade web' in order to make a correlation between handmade web
-                        pages and handmade print materials, such as zines, pamphlets, and artists books.</strong></p>
-                </div>
                 <div class="body">
                     <p>I made my first web-based work in 1995. The impetus for <a href=
                         "https://luckysoap.com/butterflies/parasite.html">Fishes & Flying Things</a> came from the
