--- a/exercise3/04-section.html
+++ b/exercise3/04-section.html
@@ -9,14 +9,22 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body><!--all the contents of an HTML document goes here-->
-        <nav>
-            <div id="breadcrumbs">
-                <a href="../index.html"><p>Home</p></a>
-                <p>></p>
-                <a href="./index.html"><p>A Handmade Web</p></a>
+        <div class="fixed-cont">
+            <nav>
+                <div id="breadcrumbs">
+                    <a href="../index.html"><p>Home</p></a>
+                    <p>></p>
+                    <a href="./index.html"><p>A Handmade Web</p></a>
+                </div>
+                <!-- <hr> -->
+            </nav>
+            <div class="definition">
+                <h2>Definition 4</h2>
+                <p><strong>I evoke the term 'handmade web' in order to draw attention both to the manual labour
+                        involved in the composition of web pages, and the functioning of the web page itself as a
+                        'manual', a 'handbook', a set of instructions required for a computer program to run.</strong></p>
             </div>
-            <!-- <hr> -->
-        </nav>
+        </div>
         <div class="nav-section">
             <div>
                 <a class="nav-button" href="./03-section.html">
@@ -25,12 +33,6 @@
                 </a>
             </div>
             <div class="text-section">
-                <div class="definition">
-                    <h2>Definition 4</h2>
-                    <p><strong>I evoke the term 'handmade web' in order to draw attention both to the manual labour
-                            involved in the composition of web pages, and the functioning of the web page itself as a
-                            'manual', a 'handbook', a set of instructions required for a computer program to run.</strong></p>
-                </div>
                 <div class="body">
                     <p>For most of its history web pages have been read on desktop or laptop computers. Readers
                         have had the option of right-clicking on any page, selecting View Page Source, copying, pasting,
