--- a/exercise3/05-section.html
+++ b/exercise3/05-section.html
@@ -9,14 +9,20 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body><!--all the contents of an HTML document goes here-->
-        <nav>
-            <div id="breadcrumbs">
-                <a href="../index.html"><p>Home</p></a>
-                <p>></p>
-                <a href="./index.html"><p>A Handmade Web</p></a>
+        <div class="fixed-cont">
+            <nav>
+                <div id="breadcrumbs">
+                    <a href="../index.html"><p>Home</p></a>
+                    <p>></p>
+                    <a href="./index.html"><p>A Handmade Web</p></a>
+                </div>
+                <!-- <hr> -->
+            </nav>
+            <div class="definition">
+                <h2>Definition 5</h2>
+                <p><strong>I evoke the term 'handmade web' in order to draw attention to the physical body.</strong></p>
             </div>
-            <!-- <hr> -->
-        </nav>
+        </div>
         <div class="nav-section">
             <div>
                 <a class="nav-button" href="./04-section.html">
@@ -25,10 +31,6 @@
                 </a>
             </div>
             <div class="text-section">
-                <div class="definition">
-                    <h2>Definition 5</h2>
-                    <p><strong>I evoke the term 'handmade web' in order to draw attention to the physical body.</strong></p>
-                </div>
                 <div class="body">
                     <p>Consider the manual labour carried out by the mouse hand in Daniel Eatock's <a href=
                         "https://www.onemilescroll.com/">The One Mile Scroll</a> (2008) A few entries appear at the 
