--- a/exercise3/01-section.html
+++ b/exercise3/01-section.html
@@ -9,14 +9,24 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body><!--all the contents of an HTML document goes here-->
-        <nav>
-            <div id="breadcrumbs">
-                <a href="../index.html"><p>Home</p></a>
-                <p>></p>
-                <a href="./index.html"><p>A Handmade Web</p></a>
+        <div class="fixed-cont">
+            <nav>
+                <div id="breadcrumbs">
+                    <a href="../index.html"><p>Home</p></a>
+                    <p>></p>
+                    <a href="./index.html"><p>A Handmade Web</p></a>
+                </div>
+                <!-- <hr> -->
+            </nav>
+            <div class="definition">
+                <h2>Definition 1</h2>
+                <p><strong>I evoke the term 'handmade web' to refer to web pages coded by hand rather than by
+                    software; web pages made and maintained by individuals rather than by businesses or
+                    corporations; web pages which are provisional, temporary, or one-of-a-kind; web pages
+                    which challenge conventions of reading, writing, design, ownership, privacy, security, or
+                    identity.</strong></p>
             </div>
-            <!-- <hr> -->
-        </nav>
+        </div>
         <div class="nav-section">
             <div>
                 <a class="nav-button" href="./index.html">
@@ -25,14 +35,6 @@
                 </a>
             </div>
             <div class="text-section">
-                <div class="definition">
-                    <h2>Definition 1</h2>
-                    <p><strong>I evoke the term 'handmade web' to refer to web pages coded by hand rather than by
-                        software; web pages made and maintained by individuals rather than by businesses or
-                        corporations; web pages which are provisional, temporary, or one-of-a-kind; web pages
-                        which challenge conventions of reading, writing, design, ownership, privacy, security, or
-                        identity.</strong></p>
-                </div>
                 <div class="body">
                     <p>Handmade web pages flourished in the mid-to-late-1990s, in the brief period after the academic
                         web and before the corporate web. ‘Handmade’ is by no means the only or best term to define
