--- a/exercise3/06-section.html
+++ b/exercise3/06-section.html
@@ -9,14 +9,21 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body><!--all the contents of an HTML document goes here-->
-        <nav>
-            <div id="breadcrumbs">
-                <a href="../index.html"><p>Home</p></a>
-                <p>></p>
-                <a href="./index.html"><p>A Handmade Web</p></a>
+        <div class="fixed-cont">
+            <nav>
+                <div id="breadcrumbs">
+                    <a href="../index.html"><p>Home</p></a>
+                    <p>></p>
+                    <a href="./index.html"><p>A Handmade Web</p></a>
+                </div>
+                <!-- <hr> -->
+            </nav>
+            <div class="definition">
+                <h2>Definition 6</h2>
+                <p><strong>I evoke the term 'handmade web' to suggest slowness and smallness as a forms of
+                    resistance.</strong></p>
             </div>
-            <!-- <hr> -->
-        </nav>
+        </div>
         <div class="nav-section">
             <div>
                 <a class="nav-button" href="./05-section.html">
@@ -25,11 +32,6 @@
                 </a>
             </div>
             <div class="text-section">
-                <div class="definition">
-                    <h2>Definition 6</h2>
-                    <p><strong>I evoke the term 'handmade web' to suggest slowness and smallness as a forms of
-                        resistance.</strong></p>
-                </div>
                 <div class="body">
                     <p>In today's highly commercialised web of multinational corporations, proprietary applications,
                         read-only devices, search algorithms, Content Management Systems, WYSIWYG editors, and
