--- a/exercise3/index.html
+++ b/exercise3/index.html
@@ -34,11 +34,11 @@
                 </a>
                 <a class="section-button" href="./03-section.html">
                     <h3>Definition 3</h3>
-                    <p>...advocate for an ongoing active engagement with the making of web pages and...</p>
+                    <p>...advocate for an ongoing active engagement with the making of web pages...</p>
                 </a>
                 <a class="section-button" href="./04-section.html">
                     <h3>Definition 4</h3>
-                    <p>...draw attention both to the manual labour involved in the composition of web pages...</p>
+                    <p>...draw attention both to the manual labour involved in the composition of web...</p>
                 </a>
                 <a class="section-button" href="./05-section.html">
                     <h3>Definition 5</h3>
