--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
         </a>
       </div>
       <hr>
+      <div class="exercise-section">
+        <a href="exercise4/index.html">
+          <h3>✴︎ Exercise 4: Letterforms</h3>
+        </a>
+      </div>
+      <hr>
+      <div class="exercise-section">
+        <a href="exercise5/index.html">
+          <h3>✴︎ Exercise 5: Letterform Motion</h3>
+        </a>
+      </div>
+      <hr>
     </div>
   </body>
 </html>
