--- a/exercise4/index.html
+++ b/exercise4/index.html
@@ -24,6 +24,7 @@
         </div>
         <div class="a2_parent">
             <div id="big_triangle" class="a2_child"></div>
+            <div id="med_triangle" class="a2_child"></div>
             <div id="small_triangle" class="a2_child"></div>
             <div id="bar" class="a2_child"></div>
         </div>
@@ -64,12 +65,16 @@
             <div id="back2" class="a4-rect-left"></div>
             <div id="back1" class="a4-rect-left"></div>
             <div id="front" class="a4-rect-left"></div>
-            <div id="front" class="a4-rect-right"></div>
             <div id="back4" class="a4-rect-middle"></div>
+            <div id="back4" class="a4-rect-right"></div>
             <div id="back3" class="a4-rect-middle"></div>
+            <div id="back3" class="a4-rect-right"></div>
             <div id="back2" class="a4-rect-middle"></div>
+            <div id="back2" class="a4-rect-right"></div>
             <div id="back1" class="a4-rect-middle"></div>
+            <div id="back1" class="a4-rect-right"></div>
             <div id="front" class="a4-rect-middle"></div>
+            <div id="front" class="a4-rect-right"></div>
         </div>
         <div class="a5_parent">
             <div id="left1" class="a5-rect-left"></div>
@@ -81,6 +86,7 @@
             <div id="right1" class="a5-rect-right"></div>
             <div id="right2" class="a5-rect-right"></div>
             <div id="right3" class="a5-rect-right"></div>
+             <div id="right6" class="a5-rect-right"></div>
             <div id="middle1" class="a5-rect-middle"></div>
             <div id="middle2" class="a5-rect-middle"></div>
             <div id="middle3" class="a5-rect-middle"></div>
