exercise5: letter animations added

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       <hr>
       <div class="exercise-section">
         <a href="exercise4/index.html">
-          <h3>✴︎ Exercise 4: Letterforms</h3>
+          <h3>✴︎ Exercise 4: Letterform Exploration</h3>
         </a>
       </div>
       <hr>
       <div class="exercise-section">
-        <a href="exercise5/index.html">
+        <a href="exercise5/letter1.html">
           <h3>✴︎ Exercise 5: Letterform Motion</h3>
         </a>
       </div>
