exercise 6: toggle project added

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         </a>
       </div>
       <hr>
+      <div class="exercise-section">
+        <a href="exercise6/index.html">
+          <h3>✴︎ Exercise 6: Toggle</h3>
+        </a>
+      </div>
+      <hr>
     </div>
   </body>
 </html>
