--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
           <h3>✴︎ Exercise 6: Toggle</h3>
         </a>
       </div>
+      <div class="exercise-section">
+        <a href="project1/index.html">
+          <h3>✴︎ Project 1</h3>
+        </a>
+      </div>
       <hr>
     </div>
   </body>
