about type edits and attempt at zoom fix

--- a/project1/index.html
+++ b/project1/index.html
@@ -976,7 +976,7 @@
             </div>
             <div class="overlay-content">
                 <div class="text-area">
-                    <h2>Around the World through Vintage Travel Posters</h2>
+                    <h2>Around the World in Vintage Travel Posters</h2>
                     <h3>from the Collections of the Boston Public Library</h3>
                     <p>Away We Go! is a digital exploration of early twentieth-century travel posters—vivid 
                         artifacts from an era often celebrated as the “golden age of travel.” These posters, 
