slight text change, image link fix

--- a/project1/index.html
+++ b/project1/index.html
@@ -24,7 +24,7 @@
         </div>
         <div id="about-popup"> 
             <p id="about-popup-message">Explore a collection of vintage travel posters from around the world dating from approximately 1910-1959. 
-                Navigate around the map to learn about this period of globalized travel.
+                Click and drag around the map to learn about this period of globalized travel.
             </p>
         </div>
         <div id="disclaimer">
@@ -960,7 +960,7 @@
                     <div class="additional-info"><h3>Subjects:</h3> <p>Harbors; Merchants</p></div>
                 </div>
                 <div class="image-area">
-                    <img class="big-image" id="new-england-img" src="./images/Algérie.png" alt=""/>
+                    <img class="big-image" id="new-england-img" src="./images/Algerie.png" alt=""/>
                 </div>
             </div>
             <div class="arrow right-arrow" onclick="showOverlay('page-overlay-Peru')">
