--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
         </a>
       </div>
       <hr>
+      <div class="exercise-section">
+        <a href="exercise8/pattern1.html">
+          <h3>✴︎ Exercise 8: Patterns</h3>
+        </a>
+      </div>
+      <hr>
     </div>
   </body>
 </html>
