--- a/index.html
+++ b/index.html
@@ -49,13 +49,19 @@
       <hr>
       <div class="exercise-section">
         <a href="project1/index.html">
-          <h3>✴︎ Project 1</h3>
+          <h3>✴︎ Project 1: Hyperlinked Set</h3>
         </a>
       </div>
       <hr>
       <div class="exercise-section">
         <a href="exercise8/pattern1.html">
           <h3>✴︎ Exercise 8: Patterns</h3>
+        </a>
+      </div>
+      <hr>
+      <div class="exercise-section">
+        <a href=" ">
+          <h3>✴︎ Project 2: Change over Time</h3>
         </a>
       </div>
       <hr>
